Finished:Stats, Business, Billing, CardDeal Comp-s

--- a/hoo_bank/src/index.css
+++ b/hoo_bank/src/index.css
@@ -16,11 +16,15 @@
 * {
   scroll-behavior: smooth;
 }
-body {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  overflow-x: hidden;
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  clip: rect(0 0 0 0);
 }
 .text-gradient {
   background: radial-gradient(
@@ -120,13 +124,13 @@ body {
 }
 .blue-gradient {
   background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
-  filter: blur(123px);
+  filter: blur(325px);
 }
 .pink-gradient {
   background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
-  filter: blur(900px);
+  filter: blur(450px);
 }
 .white-gradient {
   background: rgba(255, 255, 255, 0.6);
-  filter: blur(750px);
+  filter: blur(375px);
 }
